# serde-firestore-value

./: .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml
crates/google/: Cargo.toml  build.rs
crates/serde-firestore-value/: Cargo.toml
crates/serde-firestore-value/src/: de.rs  deserializer.rs  error.rs  firestore_array_value_serializer.rs  firestore_map_value_serializer.rs  firestore_named_array_value_serializer.rs  firestore_named_map_value_serializer.rs  firestore_value_serializer.rs  lat_lng.rs  lib.rs  option_lat_lng.rs  option_timestamp.rs  ser.rs  serde_json.rs  serializer.rs  timestamp.rs  typ.rs  value_ext.rs  value_type_ext.rs  with.rs
crates/serde-firestore-value/src/de/: error.rs  firestore_array_value_deserializer.rs  firestore_enum_deserializer.rs  firestore_geo_point_value_deserializer.rs  firestore_map_value_deserializer.rs  firestore_reference_value_deserializer.rs  firestore_struct_map_value_deserializer.rs  firestore_timestamp_value_deserializer.rs  firestore_value_deserializer.rs  lat_lng.rs  timestamp.rs  value_ext.rs  value_type_name.rs  with.rs
crates/serde-firestore-value/src/de/with/: lat_lng_as_geo_point.rs  string_as_reference.rs  timestamp_as_timestamp.rs
crates/serde-firestore-value/src/deserializer/: timestamp.rs
crates/serde-firestore-value/src/ser/: error.rs  firestore_array_value_serializer.rs  firestore_geo_point_value_serializer.rs  firestore_map_value_serializer.rs  firestore_reference_value_serializer.rs  firestore_timestamp_value_serializer.rs  firestore_value_serializer.rs  firestore_value_struct_serializer.rs  lat_lng.rs  name_map_value_serializer.rs  timestamp.rs  with.rs
crates/serde-firestore-value/src/ser/with/: lat_lng_as_geo_point.rs  string_as_reference.rs  timestamp_as_timestamp.rs
crates/serde-firestore-value/src/serializer/: firestore_array_value_serializer.rs  firestore_map_value_serializer.rs  firestore_timestamp_value_serializer.rs  firestore_value_serializer.rs  firestore_value_struct_serializer.rs
crates/serde-firestore-value/src/typ/: my_lat_lng.rs  my_timestamp.rs
crates/serde-firestore-value/src/with/: chrono_date_time_as_timestamp.rs  lat_lng.rs  option_lat_lng.rs  option_string_as_reference.rs  option_timestamp.rs  string_as_reference.rs  time_offset_date_time_as_timestamp.rs  timestamp.rs
crates/serde-firestore-value/tests/: lat_lng.rs  lib.rs  option_lat_lng.rs  option_timestamp.rs  readme.rs  rename.rs  skip.rs  tag.rs  timestamp.rs  with.rs  with_chrono_date_time_as_timestamp.rs  with_lat_lng.rs  with_option_lat_lng.rs  with_option_string_as_reference.rs  with_option_timestamp.rs  with_string_as_reference.rs  with_time_offset_date_time_as_timestamp.rs  with_timestamp.rs
src/: de.rs  error.rs  lib.rs  ser.rs  serde_json.rs  typ.rs  value_ext.rs  value_type_ext.rs  value_type_name.rs  with.rs
src/de/: deserializer.rs  firestore_array_value_deserializer.rs  firestore_enum_deserializer.rs  firestore_field_reference_value_deserializer.rs  firestore_function_value_deserializer.rs  firestore_geo_point_value_deserializer.rs  firestore_map_value_deserializer.rs  firestore_pipeline_value_deserializer.rs  firestore_reference_value_deserializer.rs  firestore_struct_map_value_deserializer.rs  firestore_timestamp_value_deserializer.rs  firestore_value_deserializer.rs  google_firestore_function_map_access.rs  google_firestore_pipeline_map_access.rs  google_firestore_pipeline_stage_deserializer.rs  google_firestore_pipeline_stage_map_access.rs  google_type_lat_lng_map_access.rs  private.rs  prost_types_timestamp_map_access.rs  with.rs
src/ser/: firestore_array_value_serializer.rs  firestore_field_reference_value_serializer.rs  firestore_function_value_serializer.rs  serializer.rs  (+10 more)
tests/: lib.rs  readme.rs  rename.rs  skip.rs  tag.rs  v0-3-0.rs  v0_3_0.rs  v0_5_0.rs  v0_7_0.rs  v0_8_0.rs  with_chrono_date_time_as_timestamp.rs  with_lat_lng.rs  with_option_chrono_date_time_as_timestamp.rs  with_option_lat_lng.rs  with_option_string_as_reference.rs  with_option_timestamp.rs  with_string_as_reference.rs  with_time_offset_date_time_as_timestamp.rs  with_timestamp.rs  with_vec_string_as_reference.rs
(+112 files in other folders)
