[package]
name = "serde-firestore-value"
version = "0.7.5"
authors = ["bouzuya <m@bouzuya.net>"]
description = "A serde (de)serializer using Firestore Value as its data format"
edition = "2021"
exclude = [".github"]
keywords = ["firestore", "gcloud", "google", "serde", "serialization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bouzuya/serde-firestore-value"

[dependencies]
chrono = { version = "0.4", optional = true }
google-api-proto = { version = "1.516", features = ["google-firestore-v1"] }
prost = "0.12"
prost-types = "0.12"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
time = { version = "0.3", optional = true }

[dev-dependencies]
anyhow = "1.0.79"
serde_json = "1.0.110"

[features]
default = []
chrono = ["dep:chrono"]
time = ["dep:time"]

[lints.rust]
missing_docs = "deny"

[lints.rustdoc]
all = "deny"
