[package]
name = "serde-firestore-value"
version = "0.25.0"
authors = ["bouzuya <m@bouzuya.net>"]
description = "A serde (de)serializer using Firestore Value as its data format"
edition = "2024"
exclude = [".github"]
keywords = ["firestore", "gcloud", "google", "serde", "serialization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bouzuya/serde-firestore-value"

[dependencies]
chrono = { version = "0.4", optional = true }
googleapis-tonic-google-firestore-v1 = { version = "0.28.0", default-features = false }
prost = "0.14"
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
time = { version = "0.3", optional = true }

[dev-dependencies]
anyhow = "1"
serde_json = "1"

[features]
default = ["vec-u8", "hash-map"]
btree-map = ["googleapis-tonic-google-firestore-v1/btree-map"]
bytes = ["googleapis-tonic-google-firestore-v1/bytes"]
chrono = ["dep:chrono"]
hash-map = ["googleapis-tonic-google-firestore-v1/hash-map"]
time = ["dep:time"]
vec-u8 = ["googleapis-tonic-google-firestore-v1/vec-u8"]

[lib]
doctest = false

[lints.rust]
missing_docs = "deny"

[lints.rustdoc]
all = "deny"
