[package]
name = "serde-firestore-value"
version = "0.0.0"
edition = "2021"

[dependencies]
google = { path = "../google" }
prost-types = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"

[dev-dependencies]
anyhow = "1.0.75"
prost-types = "0.12.1"
serde_json = "1.0.107"
