[package]
name = "serde-firestore-value"
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.31", optional = true }
google-api-proto = { version = "1.382.0", features = ["google-firestore-v1"] }
prost = "0.11.9"
prost-types = "0.11.9"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"
time = { version = "0.3.29", optional = true }

[dev-dependencies]
anyhow = "1.0.75"
serde_json = "1.0.107"

[features]
default = []
chrono = ["dep:chrono"]
time = ["dep:time"]
